tup/parse/testdata/error/output/assignments.tup
# missing right-hand side
error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:9

# unclosed labeled destructuring
error: expecting ")", got "="
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:12

# missing expression after mut
error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:13
